# googleart_download

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  README.zh-CN.md  main.py  pyproject.toml
.github/workflows/: ci.yml  smoke-download.yml
docs/: README.zh-CN.md  architecture.md  development.md  large-images.md  metadata.md  project-status.md  repo-review-2026-03-16.zh-CN.md  testing.md  usage.md
docs/releases/: v0.2.0.md  v0.3.0.md  v0.4.0.md
scripts/: generate_readme_assets.py
src/artx/: errors.py  logging_utils.py
src/artx/batch/: __init__.py  manager.py
src/artx/cli/: args.py  inputs.py
src/artx/download/: __init__.py  constants.py  http_client.py  image_writer.py  size_selection.py  stitch_from_tiles.py  tiles.py  transport.py
src/artx/metadata/: __init__.py  output.py  parsers.py
src/artx/reporting/: __init__.py  base.py  telemetry.py  tui.py
src/googleart_download/: __init__.py  batch.py  batch_state.py  cli.py  cli_args.py  cli_inputs.py  cli_output.py  constants.py  core.py  errors.py  logging_utils.py  models.py  reporters.py
src/googleart_download/batch/: __init__.py  manager.py  state.py
src/googleart_download/cli/: __init__.py  args.py  inputs.py  main.py  output.py
src/googleart_download/download/: __init__.py  cache.py  downloader.py  http_client.py  image_writer.py  size_selection.py  stitch_from_tiles.py  tiles.py  transport.py
tests/: test_batch_manager.py  test_cli.py  test_errors.py  test_http_client.py  test_integration_workflows.py  test_metadata_output.py  test_reporters.py  test_tile_cache.py  test_transport.py
(+8 files in other folders)
